# solawi-docs

./: .markdownlint.yml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: einfuehrung.md  index.md
docs/fuer_mitglieder/: mitgliedschaft_anlegen.md
einfuehrung/: index.html
fuer_mitglieder/mitgliedschaft_anlegen/: index.html
fuer_mitglieder/test/: index.html
search/: search_index.json
site/: 404.html  einfuehrung.html  index.html  search.html
site/einfuehrung/: index.html
site/fuer_mitglieder/: mitgliedschaft_anlegen.html
site/fuer_mitglieder/mitgliedschaft_anlegen/: index.html
site/search/: search_index.js  search_index.json
