[tool.poetry]
name = "solawi-docs"
version = "0.1.0"
description = "docs for Solidarische Landwirtschaft Stadt, Land, Beides e.V."
authors = ["Clemens Brachmann <clemensbrachmann@gmx.de>"]
license = "CC BY 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.5.28"
mkdocs = "1.5.0"
neoteroi-mkdocs = "^1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
